--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <section id="seleccionar-mascota">
         <h2>Elige tu mascota:</h2>
 
-        Mascotas
+        <input type="radio" name="mascota" id="hipodoge"/>
+        <label for="hipodoge">Hipodoge</label>
+
+        <input type="radio" name="mascota" id="capipepo"/>
+        <label for="capipepo">Capipepo</label>
+
+        <input type="radio" name="mascota" id="ratigueya"/>
+        <label for="ratigueya">Ratigueya</label>
+
 
         <button>Seleccionar</button>
     </section>
