--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon!</title>
+    
 </head>
 <body>
     <h1>Mokepon! 🔥💧🪴</h1>
@@ -21,7 +22,7 @@
         <label for="ratigueya">Ratigueya</label>
 
 
-        <button>Seleccionar</button>
+        <button id="boton-mascota">Seleccionar</button>
     </section>
     
     <section id="seleccionar-ataque">
@@ -29,9 +30,9 @@
         <p>Tu mascota tiene <span>3</span> vidas</p>
         <p>La mascota del enemigo tiene <span>3</span> vidas</p>
         <p>
-            <button>Fuego 🔥</button>
-            <button>Agua 💧</button>
-            <button>Tierra 🪴</button>
+            <button id="boton-fuego">Fuego 🔥</button>
+            <button id="boton-agua">Agua 💧</button>
+            <button id="boton-tierra">Tierra 🪴</button>
         </p>
     </section>
 
@@ -39,9 +40,10 @@
         <p>Tu mascota ataco con fuego, la mascota del enemigo ataco con tierra - Ganaste 🤣</p>
     </section>
 
-    <section id="reiniciar">
+    <section id="boton-reiniciar">
         <button>Reiniciar</button>
     </section>
 
+    <script src="./js/mokepon.js"></script>
 </body>
 </html>
