--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon!</title>
     <script src="./js/mokepon.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Mokepon! 🔥💧🪴</h1>
-
     <section id="seleccionar-mascota">
+        <h1>Mokepon! 🔥💧🪴</h1>
+
         <h2>Elige tu mascota:</h2>
 
         <label for="hipodoge">Hipodoge</label>
@@ -26,6 +27,8 @@
     </section>
     
     <section id="seleccionar-ataque">
+        <h1>Mokepon! 🔥💧🪴</h1>
+
         <h2>Elige tu ataque:</h2>
         <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
         <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
