--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
         <h2>Elige tu mascota:</h2>
 
-        <label for="hipodoge">Hipodoge</label>
+        <label class="tarjeta_de_moquepon" for="hipodoge">Hipodoge</label>
         <input type="radio" name="mascota" id="hipodoge"/>
 
-        <label for="capipepo">Capipepo</label>
+        <label class="tarjeta_de_moquepon" for="capipepo">Capipepo</label>
         <input type="radio" name="mascota" id="capipepo"/>
 
-        <label for="ratigueya">Ratigueya</label>
+        <label class="tarjeta_de_moquepon" for="ratigueya">Ratigueya</label>
         <input type="radio" name="mascota" id="ratigueya"/>
 
 
