layout: titulo y ataques

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <section id="seleccionar-ataque">
         <h1 class="titulo">Mokepon! 🔥💧🪴</h1>
 
-        <h2>Elige tu ataque:</h2>
+        <h2 class="subtitulo">Elige tu ataque:</h2>
 
         <div>
-            <button id="boton-fuego">Fuego 🔥</button>
-            <button id="boton-agua">Agua 💧</button>
-            <button id="boton-tierra">Tierra 🪴</button>
+            <button id="boton-fuego" class="boton-ataque">Fuego 🔥</button>
+            <button id="boton-agua" class="boton-ataque">Agua 💧</button>
+            <button id="boton-tierra" class="boton-ataque">Tierra 🪴</button>
         </div>
 
         <div>
@@ -63,7 +63,7 @@
             <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
             <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
         </div>
-          
+
     </section>
  
 </body>
