Adaptando JavaScript al diseno del juego

--- a/index.html
+++ b/index.html
@@ -49,17 +49,18 @@
             <button id="boton-tierra" class="boton-ataque">Tierra 🪴</button>
         </div>
 
-        <div>
-            <section id="mensajes">
-        
-            </section>
-        
-            <section id="boton-reiniciar">
-                <button>Reiniciar</button>
-            </section>
-        </div>
+            <div id="mensajes">
+                <p id="resultado">Mucha suerte!</p>
+
+                <section id="boton-reiniciar">
+                    <button>Reiniciar</button>
+                </section>
+            </div>
 
         <div>
+            <div id="ataques-del-jugador"></div>
+            <div id="ataques-del-enemigo"></div>
+
             <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
             <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
         </div>
